--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   flutter_neumorphic: ^3.1.0
 
   cupertino_icons: ^1.0.2
+  line_icons: ^2.0.1
 
 dev_dependencies:
   flutter_test:
