--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.second_app_todo">
    <application
-        android:label="second_app_todo"
+        android:label="MKN Notes"
         android:icon="@mipmap/ic_launcher">
         <activity
             android:name=".MainActivity"
